tests/compile_fail/filter_enum_sharp_val.rs
use test_strategy::Arbitrary;
#[derive(Arbitrary, Debug, PartialEq, Clone)]
#[filter(#x > #y)]
enum TestEnum {
    A { x: i32, y: i32 },
    B(i32),
}

fn main() {}
