tests/compile_fail/filter_enum_sharp_val.stderr
error: cannot use `#x` in this position.
 --> $DIR/filter_enum_sharp_val.rs:3:11
  |
3 | #[filter(#x > #y)]
  |           ^
